# geminiclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  OLLAMA_PI5.md  README.md  db_test.py  docker-compose.yml  docker_test.py  health_test.py  import_test.py  main.py  pyproject.toml  roadmap.md  run.sh
.agents/rules/: development.md  review.md  testing.md
.agents/skills/: clean_dev.py  github_app.md  github_app_auth.py
.agents/worflows/: commit.md
.agents/workflows/: clean.md  commit.md  run-tests.md  run_project.md
agents/: runner.py
agents/base/: agent.py  tools.py
agents/planner/: agent.py
agents/researcher/: agent.py  cache.py  tools.py
agents/reviewer/: agent.py
agents/summarizer/: agent.py
agents/validator/: agent.py
containers/: Dockerfile  Dockerfile.planner  Dockerfile.qdrant  Dockerfile.researcher  Dockerfile.reviewer  Dockerfile.slim  Dockerfile.summarizer  Dockerfile.validator
docs/: benchmarks.md
roadmaps/: roadmap_V10_stability.md  roadmap_V11.md  roadmap_V12.md  roadmap_V4.md  roadmap_V5_observability.md  roadmap_V6_research_autonomy.md  roadmap_V7_document_processing.md  roadmap_V8_postgres_migration.md  roadmap_V9_advanced_observability.md  roadmap_v2.md  roadmap_v3.md
scripts/: build_images.sh  export_metrics.py  init_db.sql  migrate_v11.py  setup_ollama_pi5.sh  setup_pi.sh
src/: autonomous_loop.py  cli.py  config.py  db.py  health.py  history.py  ipc.py  llm_cache.py  logger.py  orchestrator.py  output_manager.py  platform_utils.py  rate_limiter.py  runner.py  session.py  subtask_output.py  task_scheduler.py  telemetry.py  triage.py
src/llm/: __init__.py  agent_loop.py  base.py  context_compression.py  factory.py
src/skills/: __init__.py  base.py
src/utils/: json_parser.py  qdrant.py  terminal.py
tests/: conftest.py  test_log_relocation_manual.py  verify_qdrant.py
tests/e2e/: test_performance_local.py  test_researcher_e2e.py  test_s8_local.py
tests/integration/: test_autonomous_execution.py  test_base_agent_skills.py  test_context_integration.py  test_db_integration.py  test_infrastructure.py  test_ipc_integration.py  test_memory_persistence.py  test_orchestrator_integration.py  test_parallel_execution.py  test_planning_integration.py  test_qdrant_connection.py  test_quick_search.py  test_researcher_integration.py  test_runner_concurrency.py  test_runner_integration.py  test_s8_skills_validation.py  test_v2_context_integration.py
tests/skills/: test_code_skill.py  test_crawler.py  test_deep_search_integration.py  test_indexer.py  test_memory_skill.py  test_skill_deep_search_cache.py
tests/unit/: test_agent.py  test_agent_instructions.py  test_agent_loop.py  test_cli.py  (+51 more)
(+43 files in other folders)
